--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^2.9.7",
+    "axios": "^0.27.2",
     "dayjs": "^1.11.5",
     "immer": "^9.0.15",
     "react": "^18.2.0",
@@ -23,6 +24,9 @@
     "react-hook-form": "^7.34.2",
     "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "remark-gfm": "^3.0.1",
+    "remark-html": "^15.0.1",
     "styled-components": "^5.3.5",
     "zod": "^3.19.0"
   },
@@ -30,6 +34,7 @@
     "@rocketseat/eslint-config": "^1.1.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-syntax-highlighter": "^15.5.5",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.1.0",
     "eslint": "^8.23.0",
